version 0.3.3a (07/16/2003):

07/15/2003 Bob Rossi <bob@brasko.net>

	* filedlg.c: filedlg_recv_char would not recoginize CGDB_KEY_CTRL_M
	as a new line. Which it is.

07/15/2003 Bob Rossi <bob@brasko.net>

	* helptext.h: Changing tabs to spaces.

version 0.3.3 (07/15/2003):

07/14/2003 Bob Rossi <bob@brasko.net>

	* interface.c: Added pgup pgdn to source_input

07/02/2003 Bob Rossi <bob@brasko.net>

	* commands.c: Remove all calls tgdb_send to tgdb_run_client_command.
	This no longer has hard coded references to gdb commands.
	* interface.c: ditto


version 0.3.2 (06/25/2003):

06/25/2003 Bob Rossi <bob_rossi@cox.net>

   * interface.h: add if_change_winminheight
   * interface.c: implement if_change_winminheight, and add function
   validate_window_sizes to make sure window heights are correct.
   Add check to not highlight source window if its size is 0.
   * commands.c: add new option winmingheight "wmh"
   * helptext.h: Added winminheight doco

06/23/2003 Bob Rossi <bob_rossi@cox.net>

	* cgdb.c: cgdb_resize_term now only calls if_resize_term if there is not
	another resize signal to handle. It only handles the last one now.

06/22/2003 Bob Rossi <bob_rossi@cox.net>

	* interface.c: Fix flicker problem when ':set sc' is set.

06/22/2003 Bob Rossi <bob_rossi@cox.net>

	* TODO: Update to best of my knowledge
	* interface.c: Remove old cludge to fix CTRL+SPACE crash. The crash no
	longer happens.
	* sources.c: Add really ugly hack to get syntax highlighting on/off
	functionality. This will be cleaned up when I re-write sources.c (soon).

06/22/2003 Bob Rossi <bob_rossi@cox.net>

	* include/helptext.h: updating using ht.pl.
	* src/ht.pl: Make it generate include/helptext.h instead of src/helptext.h

06/21/2003 Bob Rossi <bob_rossi@cox.net>

	* command_lexer.h: Add EOL to enumeration. Fix compile error.

06/21/2003 Peter Kovacs <peter@kovax.org>

    * command_lexer.l: Return EOL token when scanning \n\r combinations