@@ -1,3 +1,8 @@
+07/16/2003 Peter Kovacs <peter@kovax.org>
+
+	* commands.c: implement "syntax on|off" which sets the
+	  sources_syntax_on variable for all files.
+
 version 0.3.3a (07/16/2003):
 
 07/15/2003 Bob Rossi <bob@brasko.net>
